--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,11 @@
 body {
   font-family: "Montserrat", Arial, sans-serif;
   margin: 0px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
 }
 
 h1,
