--- a/css/header.css
+++ b/css/header.css
@@ -106,13 +106,14 @@ header {
     transition: 0.6s;
     position: relative;
   }
-  .nav-menu.active .hamburguer{
+  .nav-menu.active .hamburguer {
     border-top-color: transparent;
   }
-  .nav-menu.active .hamburguer::before{
+  .nav-menu.active .hamburguer::before {
     transform: rotate(135deg);
   }
-  .nav-menu.active .hamburguer::after{
+  .nav-menu.active .hamburguer::after {
     transform: rotate(-135deg);
     top: -7px;
+  }
 }
