--- a/css/post.css
+++ b/css/post.css
@@ -8,7 +8,7 @@
 }
 
 .post-headline {
-  font-size: 44px;
+  font-size: 2.75rem;
   margin-top: -3px 0;
 }
 
@@ -44,4 +44,32 @@
 
 .links-container li:last-child {
   margin-bottom: 30px;
+}
+
+@media (max-width: 1200px) {
+  .post-container {
+    grid-template-columns: 100%;
+    padding: 0px 30px;
+  }
+  section {
+    margin: 0 auto;
+  }
+  .img-container {
+    max-width: 90%;
+  }
+  .tags-title {
+    width: 40%;
+  }
+  .post-content {
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 580px) {
+  .post-headline {
+    font-size: 1.875rem;
+  }
+  .tags-title {
+    width: 100%;
+  }
 }
